Tons of fixes and updates

--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -15,7 +15,7 @@
           <movie-and-tv-card
           
             [movie]="item"
-            (trailer)="emitTrailer($event)"
+            (trailer)="emitTrailer(item)"
             (verifyRequested)="verifyRequest()"
           ></movie-and-tv-card>
         </div>
