--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -4,11 +4,21 @@
   </div>
 </div>
 
+<!-- Add panel overlay div -->
+<div 
+  class="panel-overlay" 
+  [class.active]="isFilterPanelOpen"
+  (click)="toggleFilterPanel()"
+  *ngIf="panelCountdown"
+></div>
+
 <div class="d-flex justify-content-center mb-5">
-  <div style="position: relative; width: 250px">
+  <div
+    style="position: relative; width: 250px"
+    class="d-flex justify-content-center align-items-center"
+  >
     <p-iconfield>
       <p-inputicon styleClass="pi pi-search" />
-
       <input
         type="text"
         pInputText
@@ -18,7 +28,6 @@
         placeholder="Search..."
         style="width: 100%; padding-right: 30px"
       />
-
       <i
         *ngIf="searchQuery"
         (click)="reset()"
@@ -33,121 +42,168 @@
         "
       ></i>
     </p-iconfield>
-  </div>
-</div>
-
-@if(searchQuery){ @if(noResultsFound){
-<h4>No results found for "{{ searchQuery }}"</h4>
-
-}@else {
-<div class="container my-5">
-  <div style="display: flex; flex-direction: column; align-items: center">
-    <h4 class="text-white mb-4 text-center">Search Results</h4>
-
-    <div class="d-flex flex-wrap justify-content-center gap-4">
-      <div *ngFor="let item of searchResults">
-        <movie-and-tv-card
-          [movie]="item"
-          (trailer)="openTrailer(item.id, item.media_type)"
-          (verifyRequested)="openAgeModal()"
-          [isSearch]="searchQuery"
-        ></movie-and-tv-card>
+    <div class="d-flex" style="position: relative">
+      <div>
+        <!-- Update button to use filter-btn class -->
+        <div class="filter-btn" (click)="toggleFilterPanel()" [@flipIcon]="iconState">
+          <i class="bi bi-filter" style="font-size: 1.3rem"></i>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
-} }@else {
+<!-- Wrap content in content-wrapper -->
+<div class="content-wrapper">
+  @if(searchQuery){ @if(noResultsFound){
+  <h4>No results found for "{{ searchQuery }}"</h4>
 
-<div class="container-fluid my-4" style="width: 80%">
-  <!-- Top Rated (Mixed) -->
-  <div *ngIf="userId">
-    <h4 class=" mb-3 ms-5">Recommended For You</h4>
-    <p-carousel
-      [value]="recommendedMixed"
-      [numVisible]="5"
-      [numScroll]="3"
-      [circular]="true"
-      [showIndicators]="false"
-      styleClass="carousel"
-      [responsiveOptions]="responsiveOptions"
-    >
-      <ng-template pTemplate="item" let-item>
-        <div class="carousel-item-wrapper">
-          <movie-and-tv-card
-            [movie]="item"
-            (trailer)="openTrailer(item.id, item.media_type)"
-            (verifyRequested)="openAgeModal()"
-          ></movie-and-tv-card>
+  }@else {
+  <div class="carousel-container" [@carouselPush]="isFilterPanelOpen">
+    <div class="container my-5">
+      <div style="display: flex; flex-direction: column; align-items: center">
+        <h4 class="text-white mb-4 text-center">Search Results</h4>
+        <div class="d-flex flex-wrap justify-content-center gap-4">
+          <div *ngFor="let item of searchResults">
+            <movie-and-tv-card
+              [movie]="item"
+              (trailer)="openTrailer(item)"
+              (verifyRequested)="openAgeModal()"
+              [isSearch]="searchQuery"
+            ></movie-and-tv-card>
+          </div>
         </div>
-      </ng-template>
-    </p-carousel>
+      </div>
+    </div>
   </div>
-  <h4 class=" mb-3 ms-5 mt-5">Top Rated</h4>
-  <p-carousel
-    [value]="topRatedMixed"
-    [numVisible]="5"
-    [numScroll]="3"
-    styleClass="carousel"
-    [circular]="true"
-    [showIndicators]="false"
-    [responsiveOptions]="responsiveOptions"
-  >
-    <ng-template pTemplate="item" let-item>
-      <div class="carousel-item-wrapper">
-        <movie-and-tv-card
-          [movie]="item"
-          (trailer)="openTrailer(item.id, item.media_type)"
-          (verifyRequested)="openAgeModal()"
-        ></movie-and-tv-card>
-      </div>
-    </ng-template>
-  </p-carousel>
 
-  <!-- Action (Mixed) -->
-  <h4 class=" mb-3 mt-5 ms-5">Action</h4>
-  <p-carousel
-    [value]="actionMixed"
-    [numVisible]="5"
-    styleClass="carousel"
-    [showIndicators]="false"
-    [numScroll]="3"
-    [circular]="true"
-    [responsiveOptions]="responsiveOptions"
+  <!-- Add filter panel for search results -->
+  <div
+    *ngIf="panelCountdown"
+    [@slideInOut]="filterPanelState"
+    class="filter-panel"
   >
-    <ng-template pTemplate="item" let-item>
-      <div class="carousel-item-wrapper">
-        <movie-and-tv-card
-          [movie]="item"
-          (trailer)="openTrailer(item.id, item.media_type)"
+    <button class="filter-panel-close" (click)="toggleFilterPanel()">
+      <i class="bi bi-x" style="font-size: 1.2rem; font-weight: bold"></i>
+    </button>
+    <h5>Search Filters</h5>
+    <div class="form-group">
+      <label>Sort by</label>
+      <select class="form-control">
+        <option>Relevance</option>
+        <option>Release Date</option>
+        <option>Rating</option>
+        <option>Popularity</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label>Genre</label>
+      <select class="form-control">
+        <option>All Genres</option>
+        <option>Action</option>
+        <option>Comedy</option>
+        <option>Drama</option>
+        <option>Horror</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label>Release Year</label>
+      <input
+        type="number"
+        class="form-control"
+        min="1900"
+        max="2024"
+        placeholder="e.g. 2023"
+      />
+    </div>
+  </div>
+  } }@else {
+  <!-- Main content with carousels -->
+  <div class="carousel-container" [@carouselPush]="isFilterPanelOpen">
+    <div class="container-fluid my-4" style="width: 80%">
+      <!-- Top Rated (Mixed) -->
+      <div *ngIf="userId">
+        <h4 class="mb-3 ms-5">Recommended For You</h4>
+        <carousel
+          [items]="recommendedMixed"
+          (trailer)="openTrailer($event)"
           (verifyRequested)="openAgeModal()"
-        ></movie-and-tv-card>
+        ></carousel>
       </div>
-    </ng-template>
-  </p-carousel>
+      <h4 class="mb-3 ms-5 mt-5">Top Rated</h4>
+      <carousel
+        [items]="topRatedMixed"
+        (trailer)="openTrailer($event)"
+        (verifyRequested)="openAgeModal()"
+      ></carousel>
 
-  <!-- Comedy (Mixed) -->
-  <h4 class=" mb-3 mt-5 ms-5">Comedy</h4>
-  <p-carousel
-    [value]="comedyMixed"
-    [numVisible]="5"
-    [numScroll]="3"
-    styleClass="carousel"
-    [showIndicators]="false"
-    [circular]="true"
-    [responsiveOptions]="responsiveOptions"
-    ><ng-template pTemplate="item" let-item>
-      <div class="carousel-item-wrapper">
-        <movie-and-tv-card
-          [movie]="item"
-          (trailer)="openTrailer(item.id, item.media_type)"
-          (verifyRequested)="openAgeModal()"
-        ></movie-and-tv-card>
-      </div>
-    </ng-template>
-  </p-carousel>
+      <!-- Action (Mixed) -->
+      <h4 class="mb-3 mt-5 ms-5">Action</h4>
+      <carousel
+        [items]="actionMixed"
+        (trailer)="openTrailer($event)"
+        (verifyRequested)="openAgeModal()"
+      ></carousel>
+
+      <!-- Comedy (Mixed) -->
+      <h4 class="mb-3 mt-5 ms-5">Comedy</h4>
+      <carousel
+        [items]="comedyMixed"
+        (trailer)="openTrailer($event)"
+        (verifyRequested)="openAgeModal()"
+      ></carousel>
+    </div>
+  </div>
+
+  <!-- Filter Panel -->
+  <div
+    *ngIf="panelCountdown"
+    [@slideInOut]="filterPanelState"
+    class="filter-panel"
+  >
+    <!-- Close Button -->
+    <button class="filter-panel-close" (click)="toggleFilterPanel()">
+      <i class="bi bi-x" style="font-size: 1.2rem; font-weight: bold"></i>
+    </button>
+
+    <h5>Filters</h5>
+
+    <!-- Add your filter content here -->
+    <div class="form-group">
+      <label>Genre</label>
+      <select class="form-control">
+        <option>All Genres</option>
+        <option>Action</option>
+        <option>Comedy</option>
+        <option>Drama</option>
+        <option>Horror</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label>Release Year</label>
+      <input
+        type="number"
+        class="form-control"
+        min="1900"
+        max="2024"
+        placeholder="e.g. 2023"
+      />
+    </div>
+
+    <div class="form-group">
+      <label>Rating</label>
+      <select class="form-control">
+        <option>All Ratings</option>
+        <option>9+ Stars</option>
+        <option>8+ Stars</option>
+        <option>7+ Stars</option>
+        <option>6+ Stars</option>
+      </select>
+    </div>
+  </div>
+  }
 </div>
-}
 
 <trailer-dialog
   (onClose)="displayTrailerDialog = false"
