--- a/src/app/trailer/trailer.component.html
+++ b/src/app/trailer/trailer.component.html
@@ -5,11 +5,12 @@
   maskStyleClass="backdrop-blur-sm"
   (onHide)="closeDialog()"
   styleClass="!border-0 !bg-transparent"
+  class="my-dialog"
 >
   <ng-template #headless>
     <div
       class="d-flex flex-column rounded-3 p-4"
-      style="background-color: rgb(33, 33, 34); max-width: 690px; width: 100%"
+      style="background-color: rgb(33, 33, 34); max-width: 690px; width: 90%; align-self: center;"
     >
       <div class="d-flex justify-content-end mb-2">
         <button
@@ -29,12 +30,16 @@
           (ready)="onPlayerReady()"
           #ytPlayer
           [videoId]="trailerKey"
-          [height]="450"
           width="100%"
           [playerVars]="playerVars"
-          style="display: block; border-radius: 12px; overflow: hidden; pointer-events: none;"
+          style="
+            display: block;
+            border-radius: 12px;
+            overflow: hidden;
+            pointer-events: none;
+          "
         ></youtube-player>
- 
+
         <div
           class="controls-overlay"
           style="
@@ -48,13 +53,21 @@
           "
         >
           <div
-            style="display: flex; padding: 10px 20px; cursor: pointer; padding: 5px; margin-bottom: 8px; margin-right: 10px;"
+            style="
+              display: flex;
+              padding: 10px 20px;
+              cursor: pointer;
+              padding: 5px;
+              margin-bottom: 8px;
+              margin-right: 10px;
+            "
             (click)="toggleMute()"
             [title]="isMuted ? 'Unmute' : 'Mute'"
           >
             <i
               class="pi"
-              [ngClass]="isMuted ? 'pi-volume-off' : 'pi-volume-up'" style="font-size: 1.3rem;"
+              [ngClass]="isMuted ? 'pi-volume-off' : 'pi-volume-up'"
+              style="font-size: 1.3rem"
             ></i>
           </div>
         </div>
@@ -71,9 +84,15 @@
             z-index: 10;
             cursor: pointer;
           "
-          pTooltip="Play {{selectedMovie.title || selectedMovie.name }}" tooltipPosition="top"
+          pTooltip="Play {{ selectedMovie.title || selectedMovie.name }}"
+          tooltipPosition="top"
         >
-          <p-iconField><i class="pi pi-play" style="font-size: 1.3rem; color: rgb(116, 40, 187);"></i></p-iconField>
+          <p-iconField
+            ><i
+              class="pi pi-play"
+              style="font-size: 1.3rem; color: rgb(116, 40, 187)"
+            ></i
+          ></p-iconField>
         </div>
       </div>
 
@@ -94,16 +113,19 @@
             selectedMovie?.original_language
           }}</span>
         </div>
+        <p-scrollpanel [style]="{ height: '75px', width: '100%' }">
+          <p class="text-light mb-3">
+            {{ selectedMovie?.overview }}
+          </p>
+        </p-scrollpanel>
 
-        <p class="text-light mb-3">
-          {{ selectedMovie?.overview }}
-        </p>
-        <div class="text-secondary">
-          <strong>Genres:</strong>
-          <span *ngFor="let genre of selectedMovieGenres; let i = index">
-            {{ genre.name
-            }}<span *ngIf="i < selectedMovieGenres.length - 1">, </span>
-          </span>
+        <div class="text-secondary" style="display: flex;">
+          <strong style="margin-top: 17px; margin-right: 15px;">Genres:</strong>
+          <div class="genres-container">
+            <span *ngFor="let genre of selectedMovieGenres" class="genre-badge">
+              {{ genre.name }}
+            </span>
+          </div>
         </div>
       </div>
     </div>
