--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,7 +1,7 @@
     
     <p-carousel
       [value]="items"
-      [numVisible]="5"
+      [numVisible]="numVisible"
       [numScroll]="3"
       [circular]="true"
       [showIndicators]="false"
