--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -47,19 +47,11 @@
     </div>
   </div>
 </div>
+<div class="content-wrapper">
 
 @if(searchQuery || movies.length>0){
-<!-- Panel Overlay for Search -->
-<!-- <div 
-    class="panel-overlay" 
-    [class.active]="isFilterPanelOpen"
-    (click)="toggleFilterPanel()"
-    *ngIf="panelCountdown"
-  ></div> -->
 
-<!-- Content Wrapper for Search -->
-<div class="content-wrapper">
-  <!-- Search Results Container -->
+
   <div class="carousel-container" [@carouselPush]="isFilterPanelOpen">
     @if(noResultsFound){
     <h4 class="text-center">No movies found for "{{ searchQuery }}"</h4>
@@ -80,118 +72,11 @@
     </div>
     }
   </div>
-  <div
-    [ngClass]="{ hidden: hidePanel }"
-    [@slideInOut]="filterPanelState"
-    class="filter-panel"
-  >
-    <button class="filter-panel-close" (click)="toggleFilterPanel()">
-      <i class="bi bi-x" style="font-size: 1.2rem; font-weight: bold"></i>
-    </button>
-    <h5>Filters</h5>
-    <div class="form-group">
-      <label>Genres</label>
-      <p-multiSelect
-        [options]="genres"
-        [(ngModel)]="selectedGenres"
-        optionLabel="name"
-        placeholder="Select Genres"
-        [maxSelectedLabels]="3"
-        display="chip"
-        styleClass="w-full"
-        scrollHeight="250px"
-      >
-      </p-multiSelect>
-    </div>
-
-    <!-- Genres -->
-    <!-- <div class="form-group">
-    <label>Genres</label>
-    <p-scrollPanel
-      [style]="{ width: '100%', height: '150px' }"
-      styleClass="custom-scrollpanel"
-    >
-
-      <div *ngFor="let genre of genres" class="d-flex align-items-center mb-2">
-        <p-checkbox
-          [(ngModel)]="genre.selected"
-          binary="true"
-          styleClass="purple-checkbox"
-        ></p-checkbox>
-        <span class="ms-2">{{ genre.name }}</span>
-      </div>
-    </p-scrollPanel>
-  </div> -->
-
-    <!-- Year Range -->
-    <div class="form-group">
-      <label>Release Year Range</label>
-      <p-slider
-        [(ngModel)]="yearRange"
-        [min]="1900"
-        [max]="2025"
-        [range]="true"
-        styleClass="purple-slider"
-      ></p-slider>
-      <div>{{ yearRange[0] }} - {{ yearRange[1] }}</div>
-    </div>
-
-    <!-- Rating -->
-    <div class="form-group">
-      <label>Average Rating</label>
-      <p-rating
-        [(ngModel)]="minRating"
-        stars="5"
-        styleClass="purple-rating"
-      ></p-rating>
-      <div>{{ minRating }}+ Stars</div>
-    </div>
-
-    <!-- Include Adult -->
-    <div class="form-group">
-      <label>Include Adult Content</label>
-      <p-inputSwitch
-        [(ngModel)]="includeAdult"
-        styleClass="purple-switch"
-      ></p-inputSwitch>
-    </div>
-
-    <!-- Buttons -->
-    <div class="d-flex justify-content-between mt-4">
-      <button
-        pButton
-        type="button"
-        label="Reset"
-        severity="secondary"
-        (click)="resetFilterForm()"
-        style="width: 40%"
-        class="ms-4"
-      ></button>
-      <button
-        pButton
-        type="button"
-        label="Apply"
-        severity="help"
-        (click)="applyFilters()"
-        style="width: 40%"
-        class="me-4"
-      ></button>
-    </div>
-  </div>
+  
 
   <!-- Filter Panel for Search -->
-</div>
 }@else {
-<!-- Panel Overlay -->
-<!-- <div
-  class="panel-overlay"
-  [class.active]="isFilterPanelOpen"
-  (click)="toggleFilterPanel()"
-  *ngIf="panelCountdown"
-></div> -->
 
-<!-- Content Wrapper -->
-<div class="content-wrapper">
   <!-- Carousel Container -->
   <div class="carousel-container" [@carouselPush]="isFilterPanelOpen">
     <div class="container-fluid my-4" style="width: 80%">
@@ -228,11 +113,15 @@
       ></carousel>
     </div>
   </div>
-  <div
-    [ngClass]="{ hidden: hidePanel }"
-    [@slideInOut]="filterPanelState"
-    class="filter-panel"
-  >
+  
+}
+<div
+  [ngClass]="{ hidden: hidePanel }"
+  [@slideInOut]="!isMobileView && isFilterPanelOpen ? 'in' : 'out'"
+  [@slideInOutMobile]="isMobileView && isFilterPanelOpen ? 'in' : 'out'"
+  class="filter-panel"
+  [class.mobile-view]="isMobileView"
+>
     <button class="filter-panel-close" (click)="toggleFilterPanel()">
       <i class="bi bi-x" style="font-size: 1.2rem; font-weight: bold"></i>
     </button>
@@ -245,33 +134,12 @@
         optionLabel="name"
         placeholder="Select Genres"
         [maxSelectedLabels]="3"
-        display="chip"
         styleClass="w-full"
         scrollHeight="250px"
       >
       </p-multiSelect>
     </div>
 
-    <!-- Genres -->
-    <!-- <div class="form-group">
-    <label>Genres</label>
-    <p-scrollPanel
-      [style]="{ width: '100%', height: '150px' }"
-      styleClass="custom-scrollpanel"
-    >
-
-      <div *ngFor="let genre of genres" class="d-flex align-items-center mb-2">
-        <p-checkbox
-          [(ngModel)]="genre.selected"
-          binary="true"
-          styleClass="purple-checkbox"
-        ></p-checkbox>
-        <span class="ms-2">{{ genre.name }}</span>
-      </div>
-    </p-scrollPanel>
-  </div> -->
-
-    <!-- Year Range -->
     <div class="form-group">
       <label>Release Year Range</label>
       <p-slider
@@ -281,7 +149,26 @@
         [range]="true"
         styleClass="purple-slider"
       ></p-slider>
-      <div>{{ yearRange[0] }} - {{ yearRange[1] }}</div>
+      <div class="d-flex mt-4">
+        <p-floatlabel variant="on">
+          <input
+            pInputText
+            [(ngModel)]="yearRange[0]"
+            id="min_year"
+            maxlength="4"
+          />
+          <label for="min_year" class="floatlabel">Min Year</label>
+        </p-floatlabel>
+        <p-floatlabel variant="on" class="ms-3">
+          <input
+            pInputText
+            [(ngModel)]="yearRange[1]"
+            id="max_year"
+            maxlength="4"
+          />
+          <label for="max_year" class="floatlabel">Max Year</label>
+        </p-floatlabel>
+      </div>
     </div>
 
     <!-- Rating -->
@@ -327,7 +214,6 @@
     </div>
   </div>
 </div>
-}
 
 <trailer-dialog
   (onClose)="displayTrailerDialog = false"
