--- a/src/app/tv-shows-page/tv-shows-page.component.html
+++ b/src/app/tv-shows-page/tv-shows-page.component.html
@@ -4,8 +4,6 @@
   </div>
 </div>
 
-<!-- Panel Overlay -->
-
 <div class="d-flex justify-content-center mb-5">
   <div
     style="position: relative; width: 250px"
@@ -119,106 +117,90 @@
   </div>
 
   <!-- Main Filter Panel -->
-<div
-[ngClass]="{'hidden': hidePanel}"
-  [@slideInOut]="filterPanelState"
-  class="filter-panel"
->
-  <button class="filter-panel-close" (click)="toggleFilterPanel()">
-    <i class="bi bi-x" style="font-size: 1.2rem; font-weight: bold"></i>
-  </button>
-  <h5>Filters</h5>
-  <div class="form-group">
-    <label>Genres</label>
-    <p-multiSelect 
-      [options]="genres" 
-      [(ngModel)]="selectedGenres" 
-      severity="help"
-      optionLabel="name" 
-      placeholder="Select Genres" 
-      [maxSelectedLabels]="3" 
-      display="chip"
-      styleClass="w-full"
-      scrollHeight="250px">
-    </p-multiSelect>
-  </div>
-
-  <!-- Genres -->
-  <!-- <div class="form-group">
-    <label>Genres</label>
-    <p-scrollPanel
-      [style]="{ width: '100%', height: '150px' }"
-      styleClass="custom-scrollpanel"
-    >
-
-      <div *ngFor="let genre of genres" class="d-flex align-items-center mb-2">
-        <p-checkbox
-          [(ngModel)]="genre.selected"
-          binary="true"
-          styleClass="purple-checkbox"
-        ></p-checkbox>
-        <span class="ms-2">{{ genre.name }}</span>
-      </div>
-    </p-scrollPanel>
-  </div> -->
-
-  <!-- Year Range -->
-  <div class="form-group">
-    <label>Release Year Range</label>
-    <p-slider
-      [(ngModel)]="yearRange"
-      [min]="1900"
-      [max]="2025"
-      [range]="true"
-      styleClass="purple-slider"
-    ></p-slider>
-    <div>{{ yearRange[0] }} - {{ yearRange[1] }}</div>
-  </div>
-
-  <!-- Rating -->
-  <div class="form-group">
-    <label>Average Rating</label>
-    <p-rating
-      [(ngModel)]="minRating"
-      stars="5"
-      styleClass="purple-rating"
-    ></p-rating>
-    <div>{{ minRating }}+ Stars</div>
-  </div>
-
-  <!-- Include Adult -->
-  <div class="form-group">
-    <label>Include Adult Content</label>
-    <p-inputSwitch
-      [(ngModel)]="includeAdult"
-      styleClass="purple-switch"
-    ></p-inputSwitch>
-  </div>
-
- <!-- Buttons -->
-  <div class="d-flex justify-content-between mt-4">
-    <button
-      pButton
-      type="button"
-      label="Reset"
-      severity="secondary"
-      (click)="resetFilterForm()"
-      style="width: 40%"
-      class="ms-4"
-    ></button>
-    <button
-      pButton
-      type="button"
-      label="Apply"
-      severity="help"
-      (click)="applyFilters()"
-      style="width: 40%"
-      class="me-4"
-    ></button>
-  </div>
-</div>
 
   }
+  <div
+    [ngClass]="{ hidden: hidePanel }"
+    [@slideInOut]="!isMobileView && isFilterPanelOpen ? 'in' : 'out'"
+    [@slideInOutMobile]="isMobileView && isFilterPanelOpen ? 'in' : 'out'"
+    class="filter-panel"
+    [class.mobile-view]="isMobileView"
+  >
+    <button class="filter-panel-close" (click)="toggleFilterPanel()">
+      <i class="bi bi-x" style="font-size: 1.2rem; font-weight: bold"></i>
+    </button>
+    <h5>Filters</h5>
+    <div class="form-group">
+      <label>Genres</label>
+      <p-multiSelect
+        [options]="genres"
+        [(ngModel)]="selectedGenres"
+        severity="help"
+        optionLabel="name"
+        placeholder="Select Genres"
+        [maxSelectedLabels]="3"
+        display="chip"
+        styleClass="w-full"
+        scrollHeight="250px"
+      >
+      </p-multiSelect>
+    </div>
+
+    <!-- Year Range -->
+    <div class="form-group">
+      <label>Release Year Range</label>
+      <p-slider
+        [(ngModel)]="yearRange"
+        [min]="1900"
+        [max]="2025"
+        [range]="true"
+        styleClass="purple-slider"
+      ></p-slider>
+      <div>{{ yearRange[0] }} - {{ yearRange[1] }}</div>
+    </div>
+
+    <!-- Rating -->
+    <div class="form-group">
+      <label>Average Rating</label>
+      <p-rating
+        [(ngModel)]="minRating"
+        stars="5"
+        styleClass="purple-rating"
+      ></p-rating>
+      <div>{{ minRating }}+ Stars</div>
+    </div>
+
+    <!-- Include Adult -->
+    <div class="form-group">
+      <label>Include Adult Content</label>
+      <p-inputSwitch
+        [(ngModel)]="includeAdult"
+        styleClass="purple-switch"
+      ></p-inputSwitch>
+    </div>
+
+    <!-- Buttons -->
+    <div class="d-flex justify-content-between mt-4">
+      <button
+        pButton
+        type="button"
+        label="Reset"
+        severity="secondary"
+        (click)="resetFilterForm()"
+        style="width: 40%"
+        class="ms-4"
+      ></button>
+      <button
+        pButton
+        type="button"
+        label="Apply"
+        severity="help"
+        (click)="applyFilters()"
+        style="width: 40%"
+        class="me-4"
+      ></button>
+    </div>
+  </div>
 </div>
 
 <trailer-dialog
@@ -233,4 +215,3 @@
   [showAgeModal]="showAgeModal"
   (onClose)="closeAgeModal()"
 ></verify-age>
-
