--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-
-
 :root {
   --my-primary-color: #8b5cf6;
   --my-primary-500: #8b5cf6;
@@ -185,17 +183,38 @@ body {
 }
 /* Filter Panel Styles and Animation */
 .filter-panel {
-  position: absolute !important;
-  top: 100px;
+  position: fixed !important;
+  top: 350px;
   right: 0;
-  height: 540px !important;
+  height: 580px !important;
   width: 330px !important;
-  overflow-y: auto;
+  overflow: hidden;
   z-index: 1050 !important;
   border-radius: 20px 0 0 20px;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+@media (max-width: 460px) {
+  .filter-scroll-panel {
+    height: calc(70% - 100px) !important;
+  }
+  .filter-panel {
+    top: 100px;
+    height: 100vh !important;
+    width: 100% !important;
+  }
+  .filter-buttons button {
+    height: 50px;
+  }
+  .filter-buttons {
+    align-items: center;
+    position: sticky;
+    width: 100%;
+    height: 100px;
+  }
+}
+.filter-scroll-panel .p-scrollpanel-bar-y {
+  background: #a259ff;
+}
 /* Dark Theme */
 [data-theme="dark"] .filter-panel {
   background: #1f2937 !important; /* Solid dark background */
@@ -245,7 +264,11 @@ body {
 [data-theme="light"] .filter-panel h5::after {
   background: linear-gradient(90deg, #2563eb, #7c3aed, #db2777);
 }
-
+@media (max-width: 460px) {
+  .hidden-body {
+    overflow: hidden;
+  }
+}
 .filter-panel hr {
   display: none;
 }
@@ -255,15 +278,16 @@ body {
   position: relative;
   width: 100%;
   overflow-x: hidden;
+  min-height: 700px;
 }
 
 .panel-overlay {
+  pointer-events: none;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
   z-index: 1040;
   opacity: 0;
   visibility: hidden;
@@ -394,7 +418,7 @@ body {
 [data-theme="dark"] .filter-panel input,
 [data-theme="dark"] .filter-panel select {
   width: 100%;
-  background: #374151;
+  background: #1f2937;
   border: 1px solid #6b7280;
   color: #f9fafb;
   padding: 0.75rem;
@@ -411,6 +435,9 @@ body {
   padding: 0.75rem;
   border-radius: 8px;
   transition: border-color 0.3s ease;
+}
+[data-theme="dark"] .floatlabel {
+  background: #1f2937 !important;
 }
 
 [data-theme="dark"] .filter-panel input:focus,
